# movine

./: .dockerignore  .gitignore  .travis.yml  Cargo.toml  Dockerfile  LICENSE  README.md  movine.toml
.github/workflows/: docker.yml  rust.yml
src/: adaptor.rs  adaptors.rs  cli.rs  config.rs  db.rs  display.rs  errors.rs  file_handler.rs  helpers.rs  lib.rs  local.rs  logger.rs  main.rs  match_maker.rs  migration.rs  plan_builder.rs  sql.rs  state_machine.rs  view.rs
src/adaptor/: config.rs  pg_adaptor.rs  postgres.rs  sqlite.rs  sqlite_adaptor.rs
src/adaptor/config/: pg_params.rs  sqlite_params.rs
src/config/: postgres.rs  postgres_params.rs  sqlite.rs  sqlite_params.rs
src/errors/: pg_errors.rs  sqlite_errors.rs
src/migration/: base.rs  db_migration.rs  local_migration.rs  migration_plan.rs  migration_status.rs
