[package]
name = "movine"
license = "MIT"
version = "0.3.1"
authors = ["Byron Wasti <byron.wasti@gmail.com>"]
homepage = "https://github.com/byronwasti/movine"
repository = "https://github.com/byronwasti/movine"
description = "A simple database migration manager"
readme = "README.md"
travis-ci = { repository = "byronwasti/movine", branch = "master" }
maintenance = { status = "actively-developed" }
edition = "2018"
keywords = ["migration", "database", "cli"]
categories = ["command-line-utilities", "database"]

[dependencies]
postgres = "0.15.2"
chrono = "0.4.6"
fern = "0.5.7"
structopt = "0.2.14"
toml = "0.4.10"
serde = { version = "1.0.88", features = ["derive"] }
log = "0.4.6"
termion = "1.5.1"
rusqlite = "0.21.0"
