[package]
name = "movine"
license = "MIT"
version = "0.6.0"
authors = ["Byron Wasti <byron.wasti@gmail.com>"]
homepage = "https://github.com/byronwasti/movine"
repository = "https://github.com/byronwasti/movine"
description = "A simple database migration manager"
readme = "README.md"
maintenance = { status = "actively-developed" }
edition = "2018"
keywords = ["migration", "database", "cli"]
categories = ["command-line-utilities", "database"]

[dependencies]
postgres = "0.17.2"
chrono = "0.4.11"
dotenv = "0.15"
envy = "0.4"
structopt = "0.3.14"
toml = "0.5.6"
serde = { version = "1.0.106", features = ["derive"] }
log = "0.4.8"
termion = "1.5.5"
rusqlite = "0.23.1"
env_logger = "0.7.1"
