[package]
name = "movine"
license = "MIT"
version = "0.11.1"
authors = ["Byron Wasti <byron.wasti@gmail.com>"]
homepage = "https://github.com/byronwasti/movine"
repository = "https://github.com/byronwasti/movine"
description = "A simple database migration manager"
readme = "README.md"
maintenance = { status = "actively-developed" }
edition = "2018"
keywords = ["migration", "database", "cli"]
categories = ["command-line-utilities", "database"]

[dependencies]
postgres = "0.19.1"
chrono = "0.4.11"
dotenv = "0.15"
envy = "0.4"
structopt = "0.3.14"
toml = "0.5.6"
serde = { version = "1.0.106", features = ["derive"] }
log = "0.4.8"
rusqlite = "0.23.1"
env_logger = "0.7.1"
postgres-native-tls = { version = "0.5.0", optional = true }
native-tls = { version = "0.2.7", optional = true }
libsqlite3-sys = { version = "0.18.0", features = ["bundled"] }
ansi_term = "0.12.1"
rustls = { version = "0.19.0", optional = true }
tokio-postgres-rustls = { version = "0.8.0", optional = true }

[features]
default = ["with-native-tls"]
with-native-tls = ["native-tls", "postgres-native-tls"]
with-rustls = ["rustls", "tokio-postgres-rustls"]
